MDEV-13232: Assertion `(&(&share->intern_lock)->m_mutex)->count > 0 && pthread_equal(pthread_self(), (&(&share->intern_lock)->m_mutex)->thread)' failed in _ma_state_info_write

Length of numegic function results limited by matsimum really possible length.

(Problem was that negation did not limited it and then was not possible to create so long field)